<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  >
    
     <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.01pt"
        android:layout_weight="0.7" >
    	
         
         <com.androidplot.xy.XYPlot
	        android:id="@+id/dynamicPlot"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="10dp"
	        android:layout_weight="1"
	        title="Shimmer Data Plot"  />
         
     </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.01pt"
        android:layout_weight="0.10" >

        <TextView
            android:id="@+id/LabelSensor1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="0.1pt"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_sensor1"
            android:textColor="#ff64ff64"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/LabelSensor2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_sensor2"
            android:textColor="#ffffff64"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/LabelSensor3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0.1pt"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_sensor3"
            android:textColor="#ffff6464"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/sensorvalue1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="0.1pt"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/sensorvalue1"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/sensorvalue2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/sensorvalue2"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/sensorvalue3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0.1pt"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/sensorvalue3"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>
